# microservico-acompanhamento

./: .gitignore  API_IMPLEMENTATION_SUMMARY.md  CI_CD_STRATEGY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SECRETS_CHECKLIST.md  SQS_INTEGRATION.md  SSH_SETUP_GUIDE.md  TEST_ORGANIZATION_SUMMARY.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.py  sonar-project.properties
.github/workflows/: badge.yml  ci.yml  deploy.yml  infra_build_deploy.yml  main-branch-protection.yml  pr-check.yml  rds.yml  test.yml
alembic/: env.py
alembic/versions/: 75b3c2ff2dfa_criar_tabela_acompanhamento.py  d31838725d54_revisao_de_tabelas.py
app/: main.py  main_new.py
app/adapters/: event_adapter.py
app/api/: dependencies.py
app/api/v1/: __init__.py  acompanhamento.py
app/core/: config.py  exceptions.py  sqs_client.py
app/db/: base.py  session.py
app/domain/: acompanhamento_service.py  order_state.py
app/models/: acompanhamento.py  events.py
app/repository/: acompanhamento_repository.py
app/schemas/: acompanhamento_schemas.py
app/worker/: sqs_consumer.py  sqs_publisher.py
documentation/: ARCHITECTURE.md  BRANCH_PROTECTION.md  CI_CD_PIPELINE.md  PROJECT_REPORT.md  SONARCLOUD_SETUP.md  TESTING_GUIDE.md
infra/: main.tf  outputs.tf  variables.tf
infra-ec2/: main.tf  setup.sh.tpl  terraform.tfvars.example  variables.tf
tests/: README.md  conftest.py  test_acompanhamento.py  test_models_advanced.py  test_models_validation.py
tests/bdd/: test_acompanhamento_steps.py
tests/bdd/features/: acompanhamento_pedido.feature
tests/e2e/: test_full_workflow.py
tests/integration/: conftest.py  test_api_endpoints.py  test_api_integration.py  test_database_integration.py  test_model_consistency.py
tests/integration/worker/: test_sqs_consumer.py
tests/performance/: test_api_performance.py  test_model_performance.py
tests/unit/adapters/: test_event_adapter.py
tests/unit/api/: test_config.py  test_dependencies.py  test_request_schemas.py  test_response_schemas.py  test_schema_integration.py  test_working_endpoints.py
tests/unit/core/: test_sqs_client.py
tests/unit/db/: test_session.py
tests/unit/models/: __init__.py  test_acompanhamento.py  test_evento_acompanhamento.py  test_evento_pagamento.py  test_evento_pedido.py  test_item_pedido.py
tests/unit/repository/: conftest.py  test_acompanhamento_repository.py
tests/unit/schemas/: test_validation.py
tests/unit/service/: conftest.py  test_acompanhamento_service_business.py  test_acompanhamento_service_calculations.py  test_acompanhamento_service_complex_queries.py  test_acompanhamento_service_error_handling.py  test_acompanhamento_service_events.py  test_acompanhamento_service_helpers.py  test_acompanhamento_service_performance.py
tests/unit/worker/: test_sqs_publisher.py
