[project]
name = "acompanhamento"
version = "0.1.0"
description = ""
authors = [
    {name = "Juliano",email = "juliano.co.lopes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "confluent-kafka",
    "pydantic",
    "sqlalchemy",
    "pymysql",
    "black",
    "flake8",
    "isort"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
alembic = "*"
pytest-cov = "^6.2.1"

