[tool.poetry]
name = "acompanhamento"
version = "0.1.0"
description = "Microservice de acompanhamento de pedidos"
authors = ["Juliano <juliano.co.lopes@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
starlette = "^0.47.2"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
confluent-kafka = "*"
pydantic = "^2.0.0"
pymysql = "*"
sqlalchemy = {version = ">=2.0.0,<3.0.0", extras = ["asyncio"]}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = ">=6.0.0"
pytest-bdd = "^8.1.0"
alembic = "*"
black = "*"
flake8 = "*"
isort = "*"
ruff = "*"
mypy = "*"
trio = "^0.30.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"
psutil = "^7.0.0"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "performance: Performance tests",
    "validation: Validation tests",
    "slow: Slow running tests",
    "e2e: End-to-end tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true